@@ -3,6 +3,6 @@
    {git, "https://github.com/okeuday/CloudI.git",
     {branch, "develop"}}, [raw]}]}.
 {lib_dirs,
- ["deps/cloudi/install_local/lib/cloudi-1.2.5/lib"]}.
+ ["deps/cloudi/install_local/lib/cloudi/lib"]}.
 {sub_dirs,
  ["apps/hello_world3"]}.
