@@ -2,7 +2,7 @@
  [
   {lib_dirs,
    [
-    "deps/cloudi/install_local/lib/cloudi-1.2.5/lib"
+    "deps/cloudi/install_local/lib/cloudi/lib"
    ]},
   {erts, [{mod_cond, all}, {app_file, keep}]},
   {app_file, keep},
