@@ -1,7 +1,8 @@
 % rebar configuration file for compilation as a rebar dependency
 {pre_hooks,
  [{'get-deps', "src/autogen.sh"},
-  {'get-deps', "src/configure --prefix=`pwd`/install_local --without-rebar"},
+  {'get-deps', "src/configure --prefix=`pwd`/install_local "
+                             "--without-rebar --without-version"},
   {'get-deps', "make install"},
   {'get-deps', "echo 'CloudI is successfully stored as a rebar dependency!'"}
   ]}.
