@@ -1,6 +1,14 @@
 # -*- coding: utf-8; tab-width: 4; -*-
 # ex: set fileencoding=utf-8 softtabstop=4 tabstop=4 expandtab:
 
+2013-09-04 Michael Truog   <mjtruog [at] gmail (dot) com>
+
+    * Simplify the rebar integration by removing the version number from
+      the installation path prefix when a configuration command line argument
+      (--without-version) is provided
+    * Simplify the hello_world3 example
+    * Fix type problem in cloudi_service_db_cassandra
+
 2013-09-02 Michael Truog   <mjtruog [at] gmail (dot) com>
 
     * Move makefile "clean-configure" target to utilize the distclean target
